python-flask-library-project

--- a/templates/create.html
+++ b/templates/create.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2><a href = "/">view books</a></h2>
-    <h1>{% block title %} Add a new book {% endblock %}</h1>
+    <h1>{% block title %} Book Registration {% endblock %}</h1>
     
         <form action = "{{ url_for('create') }}" method = "POST">
    
