--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2><a href = "/new">Enter new book</a></h2>
-    <h1>{% block title %} View all books {% endblock %}</h1>
+<h2><a href = "/new">Add new book</a></h2>
+    <h1>{% block title %} Manage Books {% endblock %}</h1>
     {% for post in collects %}
         <div class='post'>
             <p>Book id: {{ post['id'] }} <h3><a href = "{{post['id']}}/edit">edit book</a></h3></p>
